--- a/portafolio.html
+++ b/portafolio.html
@@ -47,6 +47,15 @@
             >
           </li>
         </ul>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="40" height="40">
+            <use xlink:href="./images/icons.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -301,7 +310,7 @@
             </label>
             <button class="form-footer__btn" type="submit">
               Subscribe
-              <svg class="form-footer__icon">
+              <svg class="form-footer__icon" width="24px" heigth="24px">
                 <use xlink:href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
@@ -309,5 +318,22 @@
         </section>
       </div>
     </footer>
+    <div class="menu-container js-menu-container">
+      <div class="container">
+        <button class="menu-toggle js-close-menu">
+          <svg width="40" height="40">
+            <use xlink:href="./images/icons.svg#icon-close_40px1"></use>
+          </svg>
+        </button>
+        <nav>
+          <ul class="mobile-menu">
+            <li><a href="index.html" class="link">Studio</a></li>
+            <li><a href="portafolio.html" class="link">Portafolio</a></li>
+            <li><a href="index.html" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
