--- a/portafolio.html
+++ b/portafolio.html
@@ -66,7 +66,7 @@
               <button class="filters__item" type="button">All</button>
             </li>
             <li class="filters__list">
-              <button class="filters__item" type="button">Web-sites</button>
+              <button class="filters__item" type="button">Web-site</button>
             </li>
             <li class="filters__list">
               <button class="filters__item" type="button">Apps</button>
@@ -84,7 +84,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port.jpg"
+                    srcset="
+                      images/img-port-450.jpg 450w,
+                      images/img-port-354.jpg 354w,
+                      images/img-port-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port-450.jpg"
                     alt="Tecnoduck"
                   />
                   <p class="brochure__transition">
@@ -104,7 +110,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port1.jpg"
+                    srcset="
+                      images/img-port1-450.jpg 450w,
+                      images/img-port1-354.jpg 354w,
+                      images/img-port1-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port1-450.jpg"
                     alt="Poster basketball"
                   />
                   <p class="brochure__transition">
@@ -126,7 +138,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port2.jpg"
+                    srcset="
+                      images/img-port2-450.jpg 450w,
+                      images/img-port2-354.jpg 354w,
+                      images/img-port2-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port2-450.jpg"
                     alt="Restaurant Seafood"
                   />
                   <p class="brochure__transition">
@@ -146,7 +164,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port3.jpg"
+                    srcset="
+                      images/img-port3-450.jpg 450w,
+                      images/img-port3-354.jpg 354w,
+                      images/img-port3-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port3-450.jpg"
                     alt="Project Prime"
                   />
                   <p class="brochure__transition">
@@ -166,7 +190,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port4.jpg"
+                    srcset="
+                      images/img-port4-450.jpg 450w,
+                      images/img-port4-354.jpg 354w,
+                      images/img-port4-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port4-450.jpg"
                     alt="Project Boxes"
                   />
                   <p class="brochure__transition">
@@ -186,7 +216,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port5.jpg"
+                    srcset="
+                      images/img-port5-450.jpg 450w,
+                      images/img-port5-354.jpg 354w,
+                      images/img-port5-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port5-450.jpg"
                     alt="monitor"
                   />
                   <p class="brochure__transition">
@@ -206,7 +242,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port6.jpg"
+                    srcset="
+                      images/img-port6-450.jpg 450w,
+                      images/img-port6-354.jpg 354w,
+                      images/img-port6-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port6-450.jpg"
                     alt="magazine"
                   />
                   <p class="brochure__transition">
@@ -226,7 +268,13 @@
                 <div class="brochure__description">
                   <img
                     class="brochure__img"
-                    src="images/img-port7.jpg"
+                    srcset="
+                      images/img-port7-450.jpg 450w,
+                      images/img-port7-354.jpg 354w,
+                      images/img-port7-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port7-450.jpg"
                     alt="tag"
                   />
                   <p class="brochure__transition">
@@ -244,7 +292,17 @@
             <li class="brochure__item">
               <figure>
                 <div class="brochure__description">
-                  <img src="images/img-port8.jpg" alt="laptop working" />
+                  <img
+                    class="brochure__img"
+                    srcset="
+                      images/img-port8-450.jpg 450w,
+                      images/img-port8-354.jpg 354w,
+                      images/img-port8-370.jpg 370w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
+                    src="images/img-port8-450.jpg"
+                    alt="laptop working"
+                  />
                   <p class="brochure__transition">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
